# sig-health-slackbot

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-entrypoint.sh  manage.py  pyproject.toml  uwsgi.ini
apps/sig_health/: __init__.py  admin.py  apps.py  models.py  receivers.py  tests.py
apps/sig_health/management/commands/: checkout_on_monday.py  kickout.py  kickout_unregular_members.py
apps/sig_health/migrations/: 0001_initial.py  0002_member_workout_workoutadmit.py  0003_workoutcheer.py  0004_auto_20191229_1000.py  0005_auto_20191229_1023.py  0006_member_is_hard_mode.py  0007_auto_20200112_1657.py
apps/slack/: __init__.py  apps.py  urls.py  views.py
apps/slack_inbound/: __init__.py  apps.py  services.py  tasks.py  urls.py  views.py
apps/slack_inbound/services/: __init__.py  handlers.py
apps/slack_outbound/: __init__.py  admin.py  apps.py  models.py  receivers.py  tests.py
apps/slack_outbound/management/commands/: execute_slack_tasks.py  send_message.py
apps/slack_outbound/migrations/: 0001_initial.py  0002_auto_20191229_1000.py  0003_auto_20191229_1507.py
django_project/: asgi.py  sentry.py  settings.py  urls.py  utils.py  wsgi.py
django_project/settings/: base.py  dev.py  live.py  test.py
parser/: __init__.py  exceptions.py  parse.py  tests.py
parser/events/: __init__.py  types.py
parser/events/base/: __init__.py  fields.py
sig_health_slackbot/: asgi.py  settings.py  urls.py  wsgi.py
