[tool.poetry]
name = "sig-health-slackbot"
version = "0.0.1"
description = "A slackbot which make our teammates healthier"
authors = ["thehoodieguy"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.1"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
